apps/taxi/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taxi
spec:
  selector:
    app: taxi
  ports:
    - name: http
      port: 80
      targetPort: http
